# osrm-backend

./: .clang-format  .clangd  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile.in  README.md  conanfile.py  cucumber.mjs  eslint.config.js  package-lock.json  package.json  readthedocs.yaml  requirements-dev.txt
.conan2/: global.conf
.github/actions/: node-package-tests.yml
.github/actions/benchmarks/: action.yml
.github/actions/install-conan/: action.yml
.github/actions/install-python/: action.yml
.github/actions/node-package-tests/: action.yml
.github/workflows/: conan-windows.yml  docker.yml  format-taginfo-docs.yml  osrm-backend.yml
cmake/: CPackConfig.cmake  FindLua.cmake  cmake-run-env.sh.in  instrumentation.cmake  osrm-build-env.sh.in  osrm-run-env.sh.in  warnings.cmake
docker/: Dockerfile-alpine  Dockerfile-debian
docs/: Makefile  areas.md  building.md  cucumber.md  index.md  lua-types.dox  profiles.md  testing.md
docs/.vitepress/: config.js
docs/building/: explanation.md  howto.md  index.md  reference.md  tutorial.md
docs/css/: osrm-custom.css
docs/nodejs/: api.md
docs/source/: conf.py  cucumber.md  index.rst  node_osrm.rst  profiles.md  testing.md
docs/source/_static/css/: osrm-custom.css
docs/source/building/: explanation.rst  howto.rst  index.rst  reference.rst  tutorial.rst  windows-deps.md
docs/source/routed/: common.rst  common_parameters.rst  common_queries.rst  common_responses.rst  common_statuscodes.rst  environment_variables.rst  http.md  index.rst  intro.rst  match.rst  nearest.rst  results_flatbuffers.md  results_json.md  route.rst  table.rst  tile.rst  trip.rst
docs/src/: index.template.html  markdown2html.js
docs/src/building/: explanation.md  howto.md  index.md  reference.md
docs/templates/: article.html
features/lib/: osrm_loader.js  table_diff.js  utils.js
features/options/datastore/: datastore.feature
features/step_definitions/: data.js  options.js  routability.js
features/support/: cache.js  data.js  env.js  hooks.js  http.js  options.js  route.js  run.js  shared_steps.js  world.js
features/testbot/: alternative_loop.feature  load.feature
include/contractor/: graph_contractor.hpp
include/engine/: datafacade_factory.hpp  polyline_compressor.hpp
include/engine/api/: nearest_api.hpp  route_api.hpp
include/engine/guidance/: route_step.hpp  step_maneuver.hpp
include/engine/routing_algorithms/: routing_base_ch.hpp
include/extractor/: extraction_relation.hpp  scripting_environment.hpp
include/extractor/area/: area_manager.hpp  area_mesher.hpp  dijkstra.hpp  index_priority_queue.hpp
include/nodejs/: json_v8_renderer.hpp
include/osrm/: coordinate.hpp
include/server/: server.hpp
include/util/: coordinate.hpp  dynamic_graph.hpp  json_container.hpp  json_deep_compare.hpp  json_renderer.hpp  linear_hash_storage.hpp  log.hpp  xor_fast_hash.hpp
profiles/: bicycle.lua  car.lua  foot.lua  foot_area.lua
profiles/lib/: relations.lua
scripts/: activate_conan  activate_venv  build_api_docs.sh  build_node_package.sh  contractor_benchmark.py  cucumber_test_matrix.sh  install_conan.sh  install_venv.sh  markdown2html.js  post_checkout.sh  routed_benchmark.py  test_node_package.sh
scripts/ci/: CMakePresets.template.json  bench.js  benchmark_github_summary.py  build_node_package.sh  decode_matrix.py  e2e_benchmark.py  e2e_benchmark_simplified.py  node_package.sh  run_benchmarks.sh  run_benchmarks_new.sh  run_e2e_benchmarks.sh  runtime_dependencies.py  setup_env_from_matrix.py  undefinedsanitizer.conf
src/benchmarks/: CMakeLists.txt  bench.cpp  json_render.cpp  match.cpp  storage.cpp
src/contractor/: contractor.cpp  contractor_search.cpp  graph_contractor.cpp
src/engine/routing_algorithms/: alternative_path_ch.cpp  direct_shortest_path.cpp  routing_base_ch.cpp
src/extractor/: extractor.cpp  scripting_environment_lua.cpp
src/extractor/area/: area_manager.cpp  area_mesher.cpp
src/nodejs/: CMakeLists.txt  NodeJS.cmake  cmake-js-configure.py  index.js  node_osrm.cpp
src/partitioner/: dinic_max_flow.cpp
src/storage/: storage.cpp
src/tools/: contract.cpp  customize.cpp  extract.cpp  partition.cpp  routed.cpp  store.cpp
src/util/: coordinate_calculation.cpp  log.cpp
test/data/: Makefile  germany-cities.csv
test/nodejs/: benchmark.js  constants.js  match.js  nearest.js  route.js  table.js  trip.js
unit_tests/: CMakeLists.txt
unit_tests/contractor/: graph_contractor.cpp
unit_tests/engine/: douglas_peucker.cpp
unit_tests/extractor/area/: dijkstra.cpp
unit_tests/server/: parameters_parser.cpp  url_parser.cpp
unit_tests/util/: coordinate_calculation.cpp  json_render.cpp  static_rtree.cpp  viewport.cpp
